@@ -13,7 +13,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.2.0</version>
+    <version>3.3.13</version>
     <relativePath/>
   </parent>
 
@@ -24,6 +24,7 @@
     <mapstruct.version>1.5.5.Final</mapstruct.version>
     <jjwt.version>0.12.3</jjwt.version>
     <lombok.version>1.18.42</lombok.version>
+    <mysql-connector.version>8.4.0</mysql-connector.version>
 
     <maven.compiler.release>17</maven.compiler.release>
     <maven.compiler.source>17</maven.compiler.source>
@@ -36,6 +37,10 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-json</artifactId>
+    </dependency>
 
     <!-- MySQL / JPA -->
     <dependency>
@@ -45,6 +50,7 @@
     <dependency>
       <groupId>com.mysql</groupId>
       <artifactId>mysql-connector-j</artifactId>
+      <version>${mysql-connector.version}</version>
       <scope>runtime</scope>
     </dependency>
 
@@ -59,6 +65,10 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-actuator</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-mail</artifactId>
     </dependency>
 
     <!-- JWT -->
@@ -92,6 +102,12 @@
       <groupId>com.google.api-client</groupId>
       <artifactId>google-api-client</artifactId>
       <version>2.2.0</version>
+      <exclusions>
+        <exclusion>
+          <groupId>commons-logging</groupId>
+          <artifactId>commons-logging</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>com.google.oauth-client</groupId>
@@ -212,6 +228,7 @@
         <artifactId>spring-boot-maven-plugin</artifactId>
         <!-- Exclure Lombok du jar final -->
         <configuration>
+          <jvmArguments>--enable-native-access=ALL-UNNAMED</jvmArguments>
           <excludes>
             <exclude>
               <groupId>org.projectlombok</groupId>
